--- a/output/index.src.html
+++ b/output/index.src.html
@@ -47,7 +47,7 @@
 <div class="col-lg-4 col-md-4 col-sm-4">
     <div class="panel panel-default">
     <div class="panel-heading">
-        <h4><i class="glyphicon glyphicon-globle glyph-md ccolor"></i> Développement Durable</h4>
+        <h4><i class="glyphicon glyphicon-globe glyph-md ccolor"></i> Développement Durable</h4>
     </div>
     <div class="panel-body">
         <p class="text-justify">Le développement est un processus complexe que toute nation peut néanmoins accomplir s’il dispose des bonnes mesures et des bons instruments. Nous assistons le gouvernement dans sa politique de développement à travers des propositions projets à la fois efficaces et disruptives.</p>
