Nikola auto commit.
Nikola version: 7.8.3

--- a/output/index.html
+++ b/output/index.html
@@ -93,7 +93,15 @@ article: http://ogp.me/ns/article#
 
     </header><div class="e-content entry-content" itemprop="articleBody text">
     <div id="slider" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner" role="listbox">
+    <ol class="carousel-indicators">
+<li data-target="#slider" data-slide-to="0">
+        </li>
+<li data-target="#slider" data-slide-to="1" class="active">
+        </li>
+<li data-target="#slider" data-slide-to="2">
+    </li>
+</ol>
+<div class="carousel-inner" role="listbox">
         <div class="item">
             <img class="d-block img-fluid" src="galleries/b-md.jpg">
 </div>
@@ -106,15 +114,6 @@ article: http://ogp.me/ns/article#
             <img class="d-block img-fluid" src="galleries/h-md.jpg">
 </div>
     </div>
-    
-    <ol class="carousel-indicators">
-<li data-target="#slider" data-slide-to="0">
-        </li>
-<li data-target="#slider" data-slide-to="1" class="active">
-        </li>
-<li data-target="#slider" data-slide-to="2">
-    </li>
-</ol>
 </div>
 
 <div class="container sep-top">
@@ -161,7 +160,7 @@ article: http://ogp.me/ns/article#
 <!-- Call to Action Section --><div class="well">
 <div class="row">
     <div class="col-md-8">
-        <p>ACDESPE, c'est un ensemble de concepts et de projets initiés ou entrepris depuis sa création.</p>
+        <p>L'Association Camerounaise pour la Protection de L'Environnement, c'est un ensemble de concepts et de projets initiés ou entrepris depuis sa création.</p>
     </div>
     <div class="col-md-4">
         <a class="btn btn-success btn-block" href="decouvrir">Découvrir</a>
