--- a/output/galleries/index.html
+++ b/output/galleries/index.html
@@ -85,7 +85,9 @@ article: http://ogp.me/ns/article#
     <nav class="breadcrumbs"><ul class="breadcrumb">
 <li>galleries</li>
 </ul></nav><h1>galleries</h1>
-
+    <ul>
+<li><a href="1/"><i class="glyphicon glyphicon-folder-open"></i> 1</a></li>
+    </ul>
 <div id="gallery_container"></div>
 <noscript>
 <ul class="thumbnails">
