--- a/pages/index.html
+++ b/pages/index.html
@@ -10,6 +10,11 @@
 -->
 
 <div id="slider" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#slider" data-slide-to="0"></li>
+        <li data-target="#slider" data-slide-to="1" class="active"></li>
+        <li data-target="#slider" data-slide-to="2"></li>
+    </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item">
             <img class="d-block img-fluid" src="/galleries/b-md.jpg">
@@ -23,12 +28,6 @@
             <img class="d-block img-fluid" src="/galleries/h-md.jpg">
         </div>
     </div>
-    
-    <ol class="carousel-indicators">
-        <li data-target="#slider" data-slide-to="0"></li>
-        <li data-target="#slider" data-slide-to="1" class="active"></li>
-        <li data-target="#slider" data-slide-to="2"></li>
-    </ol>
 </div>
 
 <div class="container sep-top">
@@ -74,7 +73,7 @@
 <div class="well">
 <div class="row">
     <div class="col-md-8">
-        <p>ACDESPE, c'est un ensemble de concepts et de projets initiés ou entrepris depuis sa création.</p>
+        <p>L'Association Camerounaise pour la Protection de L'Environnement, c'est un ensemble de concepts et de projets initiés ou entrepris depuis sa création.</p>
     </div>
     <div class="col-md-4">
         <a class="btn btn-success btn-block" href="/decouvrir">Découvrir</a>
