--- a/decouvrir/index.html
+++ b/decouvrir/index.html
@@ -107,7 +107,7 @@ article: http://ogp.me/ns/article#
     </div>
     <div class="media-body">
         <h4 class="media-heading">Sensibilisation, Education à l'Ecocitoyenneté</h4>
-        <ul>
+        <ul class="text-justify">
 <li>Création d’une unité locale de sensibilisation.</li>
             <li>Création d’un réseau des partenaires pour la collecte des déchets à la base (pré-collecte).</li>
             <li>Sensibilisation et l’éducation des populations sur la gestion des déchets (l’Écocitoyenneté).</li>
@@ -123,7 +123,7 @@ article: http://ogp.me/ns/article#
     </div>
     <div class="media-body">
         <h4 class="media-heading">Economie Verte</h4>
-        <p><strong>Le Forum National de l’Economie Verte</strong>, « FONEV », a pour ambition de réunir les acteurs engagés sur la problématique du réchauffement climatique afin d’identifier des solutions vertes innovantes et de promouvoir l’élaboration et la mise en œuvre de politiques vertes aux niveaux national et régional.</p>
+        <p class="text-justify"><strong>Le Forum National de l’Economie Verte</strong>, « FONEV », a pour ambition de réunir les acteurs engagés sur la problématique du réchauffement climatique afin d’identifier des solutions vertes innovantes et de promouvoir l’élaboration et la mise en œuvre de politiques vertes aux niveaux national et régional.</p>
     </div>
     </div>
 </div>
@@ -135,7 +135,7 @@ article: http://ogp.me/ns/article#
     </div>
     <div class="media-body">
         <h4 class="media-heading">Santé et Développement Durable</h4>
-        <p>Le projet de lutte contre la production d’eaux en sachet non agrées a pour but d’assister le Ministère de la Santé Publique dans sa  quête perpétuelle du bien être des populations.</p>
+        <p class="text-justify">Le projet de lutte contre la production d’eaux en sachet non agrées a pour but d’assister le Ministère de la Santé Publique dans sa  quête perpétuelle du bien être des populations.</p>
     </div>
     </div>
 </div>
@@ -147,7 +147,7 @@ article: http://ogp.me/ns/article#
     </div>
     <div class="media-body">
         <h4 class="media-heading">Caravane Ecoplus</h4>
-        <ul>
+        <ul class="text-justify">
 <li>Promotion d'une « autre économie », plus social, plus écologique, plus responsable, plus solidaire, plus durable.</li>
             <li>Création d’un cadre favorable et d’un mécanisme adapté pour faciliter la création des éco activités et des emplois verts.</li>
         </ul>
