Nikola auto commit.
Source commit: 934608856708edd84042afe811b343de6bd919a2
Nikola version: 7.8.3

--- a/en/galleries/1/index.html
+++ b/en/galleries/1/index.html
@@ -129,6 +129,22 @@ article: http://ogp.me/ns/article#
 <li>
 <a href="../../../galleries/1/30.jpg" class="thumbnail image-reference" title="">
             <img src="../../../galleries/1/30.thumbnail.jpg" alt=""></a>
+        </li>
+<li>
+<a href="../../../galleries/1/1.r.jpg" class="thumbnail image-reference" title="R">
+            <img src="../../../galleries/1/1.r.thumbnail.jpg" alt="R"></a>
+        </li>
+<li>
+<a href="../../../galleries/1/11.r.jpg" class="thumbnail image-reference" title="R">
+            <img src="../../../galleries/1/11.r.thumbnail.jpg" alt="R"></a>
+        </li>
+<li>
+<a href="../../../galleries/1/8.r.jpg" class="thumbnail image-reference" title="R">
+            <img src="../../../galleries/1/8.r.thumbnail.jpg" alt="R"></a>
+        </li>
+<li>
+<a href="../../../galleries/1/01.jpg" class="thumbnail image-reference" title="">
+            <img src="../../../galleries/1/01.thumbnail.jpg" alt=""></a>
 </li>
 </ul>
 </noscript>
@@ -146,7 +162,7 @@ article: http://ogp.me/ns/article#
     moment.locale("en");
     fancydates(0, "YYYY-MM-DD HH:mm");
     </script><!-- end fancy dates --><script src="../../../assets/js/flowr.plugin.js"></script><script>
-jsonContent = [{"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/25.jpg", "url_thumb": "../../../galleries/1/25.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/16.jpg", "url_thumb": "../../../galleries/1/16.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/12.jpg", "url_thumb": "../../../galleries/1/12.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/26.jpg", "url_thumb": "../../../galleries/1/26.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/11.jpg", "url_thumb": "../../../galleries/1/11.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/1.jpg", "url_thumb": "../../../galleries/1/1.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/8.jpg", "url_thumb": "../../../galleries/1/8.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/5.jpg", "url_thumb": "../../../galleries/1/5.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/9.jpg", "url_thumb": "../../../galleries/1/9.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/30.jpg", "url_thumb": "../../../galleries/1/30.thumbnail.jpg"}];
+jsonContent = [{"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/25.jpg", "url_thumb": "../../../galleries/1/25.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/16.jpg", "url_thumb": "../../../galleries/1/16.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/12.jpg", "url_thumb": "../../../galleries/1/12.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/26.jpg", "url_thumb": "../../../galleries/1/26.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/11.jpg", "url_thumb": "../../../galleries/1/11.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/1.jpg", "url_thumb": "../../../galleries/1/1.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/8.jpg", "url_thumb": "../../../galleries/1/8.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/5.jpg", "url_thumb": "../../../galleries/1/5.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/9.jpg", "url_thumb": "../../../galleries/1/9.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../../galleries/1/30.jpg", "url_thumb": "../../../galleries/1/30.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "R", "url": "../../../galleries/1/1.r.jpg", "url_thumb": "../../../galleries/1/1.r.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "R", "url": "../../../galleries/1/11.r.jpg", "url_thumb": "../../../galleries/1/11.r.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "R", "url": "../../../galleries/1/8.r.jpg", "url_thumb": "../../../galleries/1/8.r.thumbnail.jpg"}, {"size": {"h": 75, "w": 180}, "title": "", "url": "../../../galleries/1/01.jpg", "url_thumb": "../../../galleries/1/01.thumbnail.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
