--- a/en/galleries/index.html
+++ b/en/galleries/index.html
@@ -86,45 +86,11 @@ article: http://ogp.me/ns/article#
 <li>galleries</li>
 </ul></nav><h1>galleries</h1>
     <ul>
-<li><a href="1/"><i class="glyphicon glyphicon-folder-open"></i> 1</a></li>
+<li><a href="0/"><i class="glyphicon glyphicon-folder-open"></i> 0</a></li>
+        <li><a href="1/"><i class="glyphicon glyphicon-folder-open"></i> 1</a></li>
+        <li><a href="2/"><i class="glyphicon glyphicon-folder-open"></i> 2</a></li>
     </ul>
 <div id="gallery_container"></div>
-<noscript>
-<ul class="thumbnails">
-<li>
-<a href="../../galleries/b-md.jpg" class="thumbnail image-reference" title="B md">
-            <img src="../../galleries/b-md.thumbnail.jpg" alt="B md"></a>
-        </li>
-<li>
-<a href="../../galleries/h.jpg" class="thumbnail image-reference" title="H">
-            <img src="../../galleries/h.thumbnail.jpg" alt="H"></a>
-        </li>
-<li>
-<a href="../../galleries/g.jpg" class="thumbnail image-reference" title="G">
-            <img src="../../galleries/g.thumbnail.jpg" alt="G"></a>
-        </li>
-<li>
-<a href="../../galleries/p.jpg" class="thumbnail image-reference" title="P">
-            <img src="../../galleries/p.thumbnail.jpg" alt="P"></a>
-        </li>
-<li>
-<a href="../../galleries/b.jpg" class="thumbnail image-reference" title="B">
-            <img src="../../galleries/b.thumbnail.jpg" alt="B"></a>
-        </li>
-<li>
-<a href="../../galleries/h-md.jpg" class="thumbnail image-reference" title="H md">
-            <img src="../../galleries/h-md.thumbnail.jpg" alt="H md"></a>
-        </li>
-<li>
-<a href="../../galleries/g-md.jpg" class="thumbnail image-reference" title="G md">
-            <img src="../../galleries/g-md.thumbnail.jpg" alt="G md"></a>
-        </li>
-<li>
-<a href="../../galleries/11.jpg" class="thumbnail image-reference" title="">
-            <img src="../../galleries/11.thumbnail.jpg" alt=""></a>
-</li>
-</ul>
-</noscript>
         </div>
         <!--End of body content-->
 
@@ -139,7 +105,7 @@ article: http://ogp.me/ns/article#
     moment.locale("en");
     fancydates(0, "YYYY-MM-DD HH:mm");
     </script><!-- end fancy dates --><script src="../../assets/js/flowr.plugin.js"></script><script>
-jsonContent = [{"size": {"h": 500, "w": 1200}, "title": "B md", "url": "../../galleries/b-md.jpg", "url_thumb": "../../galleries/b-md.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "H", "url": "../../galleries/h.jpg", "url_thumb": "../../galleries/h.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "G", "url": "../../galleries/g.jpg", "url_thumb": "../../galleries/g.thumbnail.jpg"}, {"size": {"h": 96, "w": 96}, "title": "P", "url": "../../galleries/p.jpg", "url_thumb": "../../galleries/p.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "B", "url": "../../galleries/b.jpg", "url_thumb": "../../galleries/b.thumbnail.jpg"}, {"size": {"h": 75, "w": 180}, "title": "H md", "url": "../../galleries/h-md.jpg", "url_thumb": "../../galleries/h-md.thumbnail.jpg"}, {"size": {"h": 75, "w": 180}, "title": "G md", "url": "../../galleries/g-md.jpg", "url_thumb": "../../galleries/g-md.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "../../galleries/11.jpg", "url_thumb": "../../galleries/11.thumbnail.jpg"}];
+jsonContent = [];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
