--- a/equipe/index.html
+++ b/equipe/index.html
@@ -143,7 +143,7 @@ article: http://ogp.me/ns/article#
 
 <div class="col-lg-4 col-md-4 col-sm-4">
     <h3>Rejoignez Nous</h3>
-    <p>Vous êtes jeunes, talentueux et préoccupés par les questions environnementales ? Nous vous offrons la possibilité d’appliquer votre expertise et de développer vos connaissances. Rejoignez une équipe engagée et dynamique pour affronter l’une des problématiques les plus engageantes de notre ère.</p>
+    <p class="text-justify">Vous êtes jeunes, talentueux et préoccupés par les questions environnementales ? Nous vous offrons la possibilité d’appliquer votre expertise et de développer vos connaissances. Rejoignez une équipe engagée et dynamique pour affronter l’une des problématiques les plus engageantes de notre ère.</p>
     <p><a class="btn btn-success btn-block" href="../contact">Prenez contact</a></p>
 </div>
 </div>
