Nikola auto commit.
Source commit: 757ec8832011c469d65a778267de669b84aa3f2b
Nikola version: 7.8.3

--- a/a-propos/index.html
+++ b/a-propos/index.html
@@ -50,7 +50,7 @@ article: http://ogp.me/ns/article#
 <a href="../">ACCEUIL</a>
                 </li>
 <li>
-<a href="../decouvrir/">DECOUVRIR</a>
+<a href="../decouvrir/">ACTIVITÉS</a>
                 </li>
 <li>
 <a href="../gallerie/">GALLERIE</a>
