--- a/en/discover/index.html
+++ b/en/discover/index.html
@@ -49,7 +49,7 @@ article: http://ogp.me/ns/article#
 <a href="../">HOME</a>
                 </li>
 <li class="active">
-<a href=".">DISCOVER <span class="sr-only">(active)</span></a>
+<a href=".">ACTIVITIES <span class="sr-only">(active)</span></a>
                 </li>
 <li>
 <a href="../gallery">GALLERY</a>
