--- a/en/index.html
+++ b/en/index.html
@@ -49,7 +49,7 @@ article: http://ogp.me/ns/article#
 <a href=".">HOME <span class="sr-only">(active)</span></a>
                 </li>
 <li>
-<a href="discover/">DISCOVER</a>
+<a href="discover/">ACTIVITIES</a>
                 </li>
 <li>
 <a href="gallery">GALLERY</a>
