--- a/gallerie/index.html
+++ b/gallerie/index.html
@@ -58,7 +58,7 @@ article: http://ogp.me/ns/article#
 <a href="../">ACCEUIL</a>
                 </li>
 <li>
-<a href="../decouvrir/">DECOUVRIR</a>
+<a href="../decouvrir/">ACTIVITÉS</a>
                 </li>
 <li class="active">
 <a href=".">GALLERIE <span class="sr-only">(actif)</span></a>
