--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ article: http://ogp.me/ns/article#
 <a href=".">ACCEUIL <span class="sr-only">(actif)</span></a>
                 </li>
 <li>
-<a href="decouvrir/">DECOUVRIR</a>
+<a href="decouvrir/">ACTIVITÉS</a>
                 </li>
 <li>
 <a href="gallerie/">GALLERIE</a>
