--- a/decouvrir/index.html
+++ b/decouvrir/index.html
@@ -56,7 +56,7 @@ article: http://ogp.me/ns/article#
 <a href="../">ACCEUIL</a>
                 </li>
 <li class="active">
-<a href=".">DECOUVRIR <span class="sr-only">(actif)</span></a>
+<a href=".">ACTIVITÉS <span class="sr-only">(actif)</span></a>
                 </li>
 <li>
 <a href="../gallerie/">GALLERIE</a>
