--- a/galleries/index.html
+++ b/galleries/index.html
@@ -50,7 +50,7 @@ article: http://ogp.me/ns/article#
 <a href="../">ACCEUIL</a>
                 </li>
 <li>
-<a href="../decouvrir/">DECOUVRIR</a>
+<a href="../decouvrir/">ACTIVITÉS</a>
                 </li>
 <li>
 <a href="../gallerie/">GALLERIE</a>
