Nikola auto commit.
Source commit: 757ec8832011c469d65a778267de669b84aa3f2b
Nikola version: 7.8.3

--- a/decouvrir/index.html
+++ b/decouvrir/index.html
@@ -106,7 +106,7 @@ article: http://ogp.me/ns/article#
         <i class="glyphicon glyphicon-book glyph-md ccolor"></i>
     </div>
     <div class="media-body">
-        <h4 class="media-heading">Sensibilisation, Education à l'Ecocitoyenneté</h4>
+        <h4 class="media-heading"><strong>Sensibilisation, Education à l'Ecocitoyenneté</strong></h4>
         <ul class="text-justify">
 <li>Création d’une unité locale de sensibilisation.</li>
             <li>Création d’un réseau des partenaires pour la collecte des déchets à la base (pré-collecte).</li>
@@ -122,7 +122,7 @@ article: http://ogp.me/ns/article#
         <i class="glyphicon glyphicon-signal glyph-md ccolor"></i>
     </div>
     <div class="media-body">
-        <h4 class="media-heading">Economie Verte</h4>
+        <h4 class="media-heading"><strong>Economie Verte</strong></h4>
         <p class="text-justify"><strong>Le Forum National de l’Economie Verte</strong>, « FONEV », a pour ambition de réunir les acteurs engagés sur la problématique du réchauffement climatique afin d’identifier des solutions vertes innovantes et de promouvoir l’élaboration et la mise en œuvre de politiques vertes aux niveaux national et régional.</p>
     </div>
     </div>
@@ -134,7 +134,7 @@ article: http://ogp.me/ns/article#
         <i class="glyphicon glyphicon-plus-sign glyph-md ccolor"></i>
     </div>
     <div class="media-body">
-        <h4 class="media-heading">Santé et Développement Durable</h4>
+        <h4 class="media-heading"><strong>Santé et Développement Durable<strong></strong></strong></h4>
         <p class="text-justify">Le projet de lutte contre la production d’eaux en sachet non agrées a pour but d’assister le Ministère de la Santé Publique dans sa  quête perpétuelle du bien être des populations.</p>
     </div>
     </div>
@@ -146,7 +146,7 @@ article: http://ogp.me/ns/article#
         <i class="glyphicon glyphicon-trash glyph-md ccolor"></i>
     </div>
     <div class="media-body">
-        <h4 class="media-heading">Caravane Ecoplus</h4>
+        <h4 class="media-heading"><strong>Caravane Ecoplus</strong></h4>
         <ul class="text-justify">
 <li>Promotion d'une « autre économie », plus social, plus écologique, plus responsable, plus solidaire, plus durable.</li>
             <li>Création d’un cadre favorable et d’un mécanisme adapté pour faciliter la création des éco activités et des emplois verts.</li>
