Nikola auto commit.
Source commit: 757ec8832011c469d65a778267de669b84aa3f2b
Nikola version: 7.8.3

--- a/equipe/index.src.html
+++ b/equipe/index.src.html
@@ -8,6 +8,7 @@
 .. description: 
 .. type: text
 -->
+<p>Une équipe de jeunes dynamiques, plein d’énergie, motivés et engagées au service des hommes et de l’environnement.</p>
 
 <div class="container">
 <div class="row">
