Nikola auto commit.
Source commit: 757ec8832011c469d65a778267de669b84aa3f2b
Nikola version: 7.8.3

--- a/equipe/index.html
+++ b/equipe/index.html
@@ -123,7 +123,7 @@ article: http://ogp.me/ns/article#
         <h4 class="media-heading">
 <strong>Kamsi Marc</strong>, <em>Responsable de la Communication</em>
 </h4>
-        <p>Marketiste, Conseillé Mairie de Douala 5ème.</p>
+        <p>Marketiste, Conseillé Jeune à la Mairie de Douala 1er.</p>
     </div>
     </li>
     
