--- a/equipe/index.src.html
+++ b/equipe/index.src.html
@@ -30,7 +30,7 @@
     </div>
     <div class="media-body">
         <h4 class="media-heading"><strong>Kamsi Marc</strong>, <em>Responsable de la Communication</em></h4>
-        <p>Marketiste, Conseillé Mairie de Douala 5ème.</p>
+        <p>Marketiste, Conseillé Jeune à la Mairie de Douala 1er.</p>
     </div>
     </li>
     
