--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -57,6 +57,9 @@ article: http://ogp.me/ns/article#
 <li>
 <a href="../team/">TEAM</a>
                 </li>
+<li>
+<a href="../about/">ABOUT</a>
+                </li>
 <li class="active">
 <a href=".">CONTACT <span class="sr-only">(active)</span></a>
                 </li>
