--- a/en/team/index.html
+++ b/en/team/index.html
@@ -58,6 +58,9 @@ article: http://ogp.me/ns/article#
 <a href=".">TEAM <span class="sr-only">(active)</span></a>
                 </li>
 <li>
+<a href="../about/">ABOUT</a>
+                </li>
+<li>
 <a href="../contact/">CONTACT</a>
                 </li>
 <li>
