--- a/gallerie/index.html
+++ b/gallerie/index.html
@@ -67,6 +67,9 @@ article: http://ogp.me/ns/article#
 <a href="../equipe/">ÉQUIPE</a>
                 </li>
 <li>
+<a href="../a-propos/">A PROPOS</a>
+                </li>
+<li>
 <a href="../contact/">CONTACT</a>
                 </li>
 <li>
