--- a/a-propos/index.src.html
+++ b/a-propos/index.src.html
@@ -9,6 +9,98 @@
 .. type: text
 -->
 
-<p>Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc. 
-   Aenean faucibus luctus enim.
-</p>
+<div class="well">
+<div class="row">
+<div class="col-md-12 text-justify">
+<h4><strong>Qui est ACDESPE?</strong></h4>
+<p>Crée en 2006, l’Association Camerounaise pour le Développement, l’Entraide Sociale et la Protection de l’Environnement (ACDESPE) est une association à but non lucratif, non confessionnelle et apolitique de droit camerounais. Elle œuvre depuis le niveau local jusqu’au niveau central pour la protection de l’environnement.</p>
+</div>
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+<div class="col-md-6">
+<h4><strong>Nos Objectifs</strong></h4>
+<ul>
+    <li>La protection de l’environnement.</li>
+    <li>Promotion de l’économie verte au Cameroun et en Afrique centrale.</li>
+    <li>La valorisation des éco-innovations.</li>
+    <li>Promotion et encadrement des métiers verts.</li>
+    <li>Soutien aux jeunes et aux femmes défavorisés.</li>
+</ul>
+</div>
+
+<div class="col-md-6">
+<h4><strong>Nos Thématiques</strong></h4>
+<ul>
+    <li>Economie Verte et Gouvernance forestière.</li>
+    <li>REDD+ et Changements Climatiques.</li>
+    <li>Gestion des déchets ménagers et urbains.</li>
+    <li>Sensibilisation, Education à l’Eco-citoyenneté.</li>
+    <li>Démocratie environnementale.</li>
+</ul>
+</div>
+</div>
+</div>
+
+<hr>
+
+<div class="container text-center">
+<div class="row">
+    <div class="col-md-12">
+    <h4><strong>Notre Cible</strong></h4>
+    </div>
+    <div class="col-md-4">
+    <i class="fa fa-users ccolor fa-2x"></i>
+    <h5>Communautés locales.</h5>
+    </div>
+    
+    <div class="col-md-4">
+    <i class="fa fa-institution ccolor fa-2x"></i>
+    <h5>Institutions publiques.</h5>
+    </div>
+    
+    <div class="col-md-4">
+    <i class="fa fa-female ccolor fa-2x"></i>
+    <h5>Jeunes et femmes.</h5>
+    </div>
+</div>
+</div>
+
+<h4 class="text-center sep-top"><strong>Réseaux et Plateformes</strong></h4>
+<div class="well">
+<div class="row">
+<div class="col-md-4 text-center">
+    <h5 class="ccolor"><strong>CEFDHAC</strong></h5>
+    <p>Conférence sur les Ecosystèmes des Forêts Denses et Humides d’Afrique Centrale.</p>
+</div>
+
+<div class="col-md-4 text-center">
+    <h5 class="ccolor"><strong>REJEFAC</strong></h5>
+    <p>Réseau des Jeunes pour les Forêts d’Afrique Centrale.</p>
+</div>
+
+<div class="col-md-4 text-center">
+    <h5 class="ccolor"><strong>RACEN</strong></h5>
+    <p>Réseau d’Acteurs pour les Energies Renouvelables.</p>
+</div>
+</div>
+
+<div class="row">
+<div class="col-md-4 text-center">
+    <h5 class="ccolor"><strong>RSE</strong></h5>
+    <p>Collectif RSE-Cameroun.</p>
+</div>
+
+<div class="col-md-4 text-center">
+    <h5 class="ccolor"><strong>EDC-OSC</strong></h5>
+    <p>Plate-forme Electricity Development Corporation et Organisation de la Société Civile pour la mise en œuvre du PIR et du PGES sur le barrage Hydroélectrique de Lompangar.</p>
+</div>
+
+<div class="col-md-4 text-center">
+    <h5 class="ccolor"><strong>HYDROMINE-OSC</strong></h5>
+    <p>Plate-forme HYDROMINE et Organisation de la Société Civile pour la mise en œuvre du PGES sur le barrage Hydroélectrique de Grand Eweng).</p>
+</div>
+</div>
+</div>
