--- a/decouvrir/index.html
+++ b/decouvrir/index.html
@@ -65,6 +65,9 @@ article: http://ogp.me/ns/article#
 <a href="../equipe/">ÉQUIPE</a>
                 </li>
 <li>
+<a href="../a-propos/">A PROPOS</a>
+                </li>
+<li>
 <a href="../contact/">CONTACT</a>
                 </li>
 <li>
@@ -119,7 +122,7 @@ article: http://ogp.me/ns/article#
 <div class="col-lg-6 col-md-6 col-sm-6">
     <div class="media">
     <div class="media-left">
-        <i class="glyphicon glyphicon-signal glyph-md ccolor"></i>
+        <i class="fa fa-line-chart fa-2x ccolor"></i>
     </div>
     <div class="media-body">
         <h4 class="media-heading"><strong>Economie Verte</strong></h4>
@@ -143,7 +146,7 @@ article: http://ogp.me/ns/article#
 <div class="col-lg-6 col-md-6 col-sm-6">
     <div class="media">
     <div class="media-left">
-        <i class="glyphicon glyphicon-trash glyph-md ccolor"></i>
+        <i class="fa fa-recycle fa-2x ccolor"></i>
     </div>
     <div class="media-body">
         <h4 class="media-heading"><strong>Caravane Ecoplus</strong></h4>
