--- a/decouvrir/index.src.html
+++ b/decouvrir/index.src.html
@@ -32,7 +32,7 @@
 <div class="col-lg-6 col-md-6 col-sm-6">
     <div class="media">
     <div class="media-left">
-        <i class="glyphicon glyphicon-signal glyph-md ccolor"></i>
+        <i class="fa fa-line-chart fa-2x ccolor"></i>
     </div>
     <div class="media-body">
         <h4 class="media-heading"><strong>Economie Verte</strong></h4>
@@ -56,7 +56,7 @@
 <div class="col-lg-6 col-md-6 col-sm-6">
     <div class="media">
     <div class="media-left">
-        <i class="glyphicon glyphicon-trash glyph-md ccolor"></i>
+        <i class="fa fa-recycle fa-2x ccolor"></i>
     </div>
     <div class="media-body">
         <h4 class="media-heading"><strong>Caravane Ecoplus</strong></h4>
