--- a/en/galleries/0/index.html
+++ b/en/galleries/0/index.html
@@ -59,6 +59,9 @@ article: http://ogp.me/ns/article#
 <a href="../../team/">TEAM</a>
                 </li>
 <li>
+<a href="../../about/">ABOUT</a>
+                </li>
+<li>
 <a href="../../contact/">CONTACT</a>
                 </li>
 <li>
@@ -91,20 +94,20 @@ article: http://ogp.me/ns/article#
 <noscript>
 <ul class="thumbnails">
 <li>
-<a href="../../../galleries/0/01.r.jpg" class="thumbnail image-reference" title="R">
-            <img src="../../../galleries/0/01.r.thumbnail.jpg" alt="R"></a>
-        </li>
-<li>
-<a href="../../../galleries/0/02.r.jpg" class="thumbnail image-reference" title="R">
-            <img src="../../../galleries/0/02.r.thumbnail.jpg" alt="R"></a>
-        </li>
-<li>
 <a href="../../../galleries/0/08.r.jpg" class="thumbnail image-reference" title="R">
             <img src="../../../galleries/0/08.r.thumbnail.jpg" alt="R"></a>
         </li>
 <li>
 <a href="../../../galleries/0/09.r.jpg" class="thumbnail image-reference" title="R">
             <img src="../../../galleries/0/09.r.thumbnail.jpg" alt="R"></a>
+        </li>
+<li>
+<a href="../../../galleries/0/01.r.jpg" class="thumbnail image-reference" title="R">
+            <img src="../../../galleries/0/01.r.thumbnail.jpg" alt="R"></a>
+        </li>
+<li>
+<a href="../../../galleries/0/02.r.jpg" class="thumbnail image-reference" title="R">
+            <img src="../../../galleries/0/02.r.thumbnail.jpg" alt="R"></a>
 </li>
 </ul>
 </noscript>
@@ -122,7 +125,7 @@ article: http://ogp.me/ns/article#
     moment.locale("en");
     fancydates(0, "YYYY-MM-DD HH:mm");
     </script><!-- end fancy dates --><script src="../../../assets/js/flowr.plugin.js"></script><script>
-jsonContent = [{"size": {"h": 75, "w": 180}, "title": "R", "url": "../../../galleries/0/01.r.jpg", "url_thumb": "../../../galleries/0/01.r.thumbnail.jpg"}, {"size": {"h": 75, "w": 180}, "title": "R", "url": "../../../galleries/0/02.r.jpg", "url_thumb": "../../../galleries/0/02.r.thumbnail.jpg"}, {"size": {"h": 75, "w": 180}, "title": "R", "url": "../../../galleries/0/08.r.jpg", "url_thumb": "../../../galleries/0/08.r.thumbnail.jpg"}, {"size": {"h": 75, "w": 180}, "title": "R", "url": "../../../galleries/0/09.r.jpg", "url_thumb": "../../../galleries/0/09.r.thumbnail.jpg"}];
+jsonContent = [{"size": {"h": 75, "w": 180}, "title": "R", "url": "../../../galleries/0/08.r.jpg", "url_thumb": "../../../galleries/0/08.r.thumbnail.jpg"}, {"size": {"h": 75, "w": 180}, "title": "R", "url": "../../../galleries/0/09.r.jpg", "url_thumb": "../../../galleries/0/09.r.thumbnail.jpg"}, {"size": {"h": 75, "w": 180}, "title": "R", "url": "../../../galleries/0/01.r.jpg", "url_thumb": "../../../galleries/0/01.r.thumbnail.jpg"}, {"size": {"h": 75, "w": 180}, "title": "R", "url": "../../../galleries/0/02.r.jpg", "url_thumb": "../../../galleries/0/02.r.thumbnail.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
