--- a/en/galleries/2/index.html
+++ b/en/galleries/2/index.html
@@ -59,6 +59,9 @@ article: http://ogp.me/ns/article#
 <a href="../../team/">TEAM</a>
                 </li>
 <li>
+<a href="../../about/">ABOUT</a>
+                </li>
+<li>
 <a href="../../contact/">CONTACT</a>
                 </li>
 <li>
@@ -91,16 +94,16 @@ article: http://ogp.me/ns/article#
 <noscript>
 <ul class="thumbnails">
 <li>
-<a href="../../../galleries/2/SAM_0446.JPG" class="thumbnail image-reference" title="Sam 0446">
-            <img src="../../../galleries/2/SAM_0446.thumbnail.JPG" alt="Sam 0446"></a>
-        </li>
-<li>
 <a href="../../../galleries/2/SAM_0442.JPG" class="thumbnail image-reference" title="Sam 0442">
             <img src="../../../galleries/2/SAM_0442.thumbnail.JPG" alt="Sam 0442"></a>
         </li>
 <li>
 <a href="../../../galleries/2/SAM_0443.JPG" class="thumbnail image-reference" title="Sam 0443">
             <img src="../../../galleries/2/SAM_0443.thumbnail.JPG" alt="Sam 0443"></a>
+        </li>
+<li>
+<a href="../../../galleries/2/SAM_0446.JPG" class="thumbnail image-reference" title="Sam 0446">
+            <img src="../../../galleries/2/SAM_0446.thumbnail.JPG" alt="Sam 0446"></a>
 </li>
 </ul>
 </noscript>
@@ -118,7 +121,7 @@ article: http://ogp.me/ns/article#
     moment.locale("en");
     fancydates(0, "YYYY-MM-DD HH:mm");
     </script><!-- end fancy dates --><script src="../../../assets/js/flowr.plugin.js"></script><script>
-jsonContent = [{"size": {"h": 135, "w": 180}, "title": "Sam 0446", "url": "../../../galleries/2/SAM_0446.JPG", "url_thumb": "../../../galleries/2/SAM_0446.thumbnail.JPG"}, {"size": {"h": 135, "w": 180}, "title": "Sam 0442", "url": "../../../galleries/2/SAM_0442.JPG", "url_thumb": "../../../galleries/2/SAM_0442.thumbnail.JPG"}, {"size": {"h": 135, "w": 180}, "title": "Sam 0443", "url": "../../../galleries/2/SAM_0443.JPG", "url_thumb": "../../../galleries/2/SAM_0443.thumbnail.JPG"}];
+jsonContent = [{"size": {"h": 135, "w": 180}, "title": "Sam 0442", "url": "../../../galleries/2/SAM_0442.JPG", "url_thumb": "../../../galleries/2/SAM_0442.thumbnail.JPG"}, {"size": {"h": 135, "w": 180}, "title": "Sam 0443", "url": "../../../galleries/2/SAM_0443.JPG", "url_thumb": "../../../galleries/2/SAM_0443.thumbnail.JPG"}, {"size": {"h": 135, "w": 180}, "title": "Sam 0446", "url": "../../../galleries/2/SAM_0446.JPG", "url_thumb": "../../../galleries/2/SAM_0446.thumbnail.JPG"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
