--- a/equipe/index.src.html
+++ b/equipe/index.src.html
@@ -20,7 +20,7 @@
     </div>
     <div class="media-body">
         <h4 class="media-heading"><strong>Kenfack Anyssé</strong>, <em>Président</em></h4>
-        <p>Expert, Chercheur en Économie Verte. Ambassadeur des Synergies Africaines.</p>
+        <p>Chercheur en Économie Verte. Ambassadeur des Synergies Africaines.</p>
     </div>
     </li>
     
