--- a/galleries/1/index.html
+++ b/galleries/1/index.html
@@ -59,6 +59,9 @@ article: http://ogp.me/ns/article#
 <a href="../../equipe/">ÉQUIPE</a>
                 </li>
 <li>
+<a href="../../a-propos/">A PROPOS</a>
+                </li>
+<li>
 <a href="../../contact/">CONTACT</a>
                 </li>
 <li>
@@ -91,60 +94,60 @@ article: http://ogp.me/ns/article#
 <noscript>
 <ul class="thumbnails">
 <li>
-<a href="25.jpg" class="thumbnail image-reference" title="">
-            <img src="25.thumbnail.jpg" alt=""></a>
-        </li>
-<li>
-<a href="16.jpg" class="thumbnail image-reference" title="">
-            <img src="16.thumbnail.jpg" alt=""></a>
-        </li>
-<li>
-<a href="12.jpg" class="thumbnail image-reference" title="">
-            <img src="12.thumbnail.jpg" alt=""></a>
-        </li>
-<li>
-<a href="26.jpg" class="thumbnail image-reference" title="">
-            <img src="26.thumbnail.jpg" alt=""></a>
+<a href="1.r.jpg" class="thumbnail image-reference" title="R">
+            <img src="1.r.thumbnail.jpg" alt="R"></a>
         </li>
 <li>
 <a href="11.jpg" class="thumbnail image-reference" title="">
             <img src="11.thumbnail.jpg" alt=""></a>
         </li>
 <li>
-<a href="1.jpg" class="thumbnail image-reference" title="">
-            <img src="1.thumbnail.jpg" alt=""></a>
-        </li>
-<li>
-<a href="8.jpg" class="thumbnail image-reference" title="">
-            <img src="8.thumbnail.jpg" alt=""></a>
-        </li>
-<li>
-<a href="5.jpg" class="thumbnail image-reference" title="">
-            <img src="5.thumbnail.jpg" alt=""></a>
-        </li>
-<li>
-<a href="9.jpg" class="thumbnail image-reference" title="">
-            <img src="9.thumbnail.jpg" alt=""></a>
+<a href="25.jpg" class="thumbnail image-reference" title="">
+            <img src="25.thumbnail.jpg" alt=""></a>
         </li>
 <li>
 <a href="30.jpg" class="thumbnail image-reference" title="">
             <img src="30.thumbnail.jpg" alt=""></a>
         </li>
 <li>
-<a href="1.r.jpg" class="thumbnail image-reference" title="R">
-            <img src="1.r.thumbnail.jpg" alt="R"></a>
-        </li>
-<li>
 <a href="11.r.jpg" class="thumbnail image-reference" title="R">
             <img src="11.r.thumbnail.jpg" alt="R"></a>
+        </li>
+<li>
+<a href="1.jpg" class="thumbnail image-reference" title="">
+            <img src="1.thumbnail.jpg" alt=""></a>
+        </li>
+<li>
+<a href="26.jpg" class="thumbnail image-reference" title="">
+            <img src="26.thumbnail.jpg" alt=""></a>
+        </li>
+<li>
+<a href="5.jpg" class="thumbnail image-reference" title="">
+            <img src="5.thumbnail.jpg" alt=""></a>
         </li>
 <li>
 <a href="8.r.jpg" class="thumbnail image-reference" title="R">
             <img src="8.r.thumbnail.jpg" alt="R"></a>
         </li>
 <li>
+<a href="12.jpg" class="thumbnail image-reference" title="">
+            <img src="12.thumbnail.jpg" alt=""></a>
+        </li>
+<li>
+<a href="9.jpg" class="thumbnail image-reference" title="">
+            <img src="9.thumbnail.jpg" alt=""></a>
+        </li>
+<li>
+<a href="16.jpg" class="thumbnail image-reference" title="">
+            <img src="16.thumbnail.jpg" alt=""></a>
+        </li>
+<li>
 <a href="01.jpg" class="thumbnail image-reference" title="">
             <img src="01.thumbnail.jpg" alt=""></a>
+        </li>
+<li>
+<a href="8.jpg" class="thumbnail image-reference" title="">
+            <img src="8.thumbnail.jpg" alt=""></a>
 </li>
 </ul>
 </noscript>
@@ -162,7 +165,7 @@ article: http://ogp.me/ns/article#
     moment.locale("fr");
     fancydates(0, "YYYY-MM-DD HH:mm");
     </script><!-- end fancy dates --><script src="../../assets/js/flowr.plugin.js"></script><script>
-jsonContent = [{"size": {"h": 120, "w": 180}, "title": "", "url": "25.jpg", "url_thumb": "25.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "16.jpg", "url_thumb": "16.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "12.jpg", "url_thumb": "12.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "26.jpg", "url_thumb": "26.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "11.jpg", "url_thumb": "11.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "1.jpg", "url_thumb": "1.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "8.jpg", "url_thumb": "8.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "5.jpg", "url_thumb": "5.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "9.jpg", "url_thumb": "9.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "30.jpg", "url_thumb": "30.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "R", "url": "1.r.jpg", "url_thumb": "1.r.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "R", "url": "11.r.jpg", "url_thumb": "11.r.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "R", "url": "8.r.jpg", "url_thumb": "8.r.thumbnail.jpg"}, {"size": {"h": 75, "w": 180}, "title": "", "url": "01.jpg", "url_thumb": "01.thumbnail.jpg"}];
+jsonContent = [{"size": {"h": 120, "w": 180}, "title": "R", "url": "1.r.jpg", "url_thumb": "1.r.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "11.jpg", "url_thumb": "11.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "25.jpg", "url_thumb": "25.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "30.jpg", "url_thumb": "30.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "R", "url": "11.r.jpg", "url_thumb": "11.r.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "1.jpg", "url_thumb": "1.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "26.jpg", "url_thumb": "26.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "5.jpg", "url_thumb": "5.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "R", "url": "8.r.jpg", "url_thumb": "8.r.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "12.jpg", "url_thumb": "12.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "9.jpg", "url_thumb": "9.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "16.jpg", "url_thumb": "16.thumbnail.jpg"}, {"size": {"h": 75, "w": 180}, "title": "", "url": "01.jpg", "url_thumb": "01.thumbnail.jpg"}, {"size": {"h": 120, "w": 180}, "title": "", "url": "8.jpg", "url_thumb": "8.thumbnail.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
