--- a/output/gallerie/index.html
+++ b/output/gallerie/index.html
@@ -135,7 +135,7 @@ navbar-dark bg-dark
       <img src="../images/hero-12.jpg" class="d-block w-100" alt="...">
 </div>
     <div class="carousel-item">
-      <img src="../images/11.jpg" class="d-block w-100" alt="...">
+      <img src="../images/hero-11.jpg" class="d-block w-100" alt="...">
 </div>
   </div>
   <a class="carousel-control-prev" href="#gal-2" role="button" data-slide="prev">
