Fixed outdated template
Nikola version: 8.0.2

--- a/output/gallerie/index.html
+++ b/output/gallerie/index.html
@@ -43,22 +43,22 @@ navbar-dark bg-dark
 
         <div class="collapse navbar-collapse" id="bs-navbar">
             <ul class="navbar-nav mr-auto">
-<li class="nav-item">
+<li class="nav-item font-weight-bold">
 <a href="../" class="nav-link">ACCEUIL</a>
                 </li>
-<li class="nav-item">
+<li class="nav-item font-weight-bold">
 <a href="../a-propos/" class="nav-link">A PROPOS</a>
                 </li>
-<li class="nav-item">
+<li class="nav-item font-weight-bold">
 <a href="../activites/" class="nav-link">ACTIVITES</a>
                 </li>
-<li class="nav-item">
+<li class="nav-item font-weight-bold">
 <a href="../equipe/" class="nav-link">EQUIPE</a>
                 </li>
-<li class="nav-item active">
+<li class="nav-item active font-weight-bold">
 <a href="." class="nav-link">GALLERIE <span class="sr-only">(actif)</span></a>
                 </li>
-<li class="nav-item">
+<li class="nav-item font-weight-bold">
 <a href="../contact/" class="nav-link">CONTACT</a>
 
                 
@@ -202,7 +202,7 @@ navbar-dark bg-dark
 </div>
 
 
-            <script src="../assets/js/jquery.min.js"></script><script src="../assets/js/popper.min.js"></script><script src="../assets/js/bootstrap.min.js"></script><script src="../assets/js/baguetteBox.min.js"></script><script>
+            <script src="../assets/js/jquery.min.js"></script><script src="../assets/js/popper.min.js"></script><script src="../assets/js/bootstrap.min.js"></script><script src="../assets/js/baguetteBox.min.js"></script><script src="../assets/js/iconify.min.js"></script><script>
     baguetteBox.run('div#content', {
         ignoreClass: 'islink',
         captions: function(element) {
