--- a/output/equipe/index.html
+++ b/output/equipe/index.html
@@ -81,7 +81,7 @@ navbar-dark bg-dark
 
 <div class="card-deck mb-5">
   <div class="card border-success">
-    <img src="../images/eq.jpg" class="card-img-top img-thumbnail" alt="..."><!--<div class="card-header"><h5>Kenfack Anyssé</h5></div>--><div class="card-body">
+    <img src="../images/kenfack-anysse.jpg" class="card-img-top img-thumbnail" alt="..."><!--<div class="card-header"><h5>Kenfack Anyssé</h5></div>--><div class="card-body">
       <h5 class="card-title text-success font-weight-bold">Kenfack Anyssé</h5>
       <p class="card-text font-weight-bold">Président</p>
       <p class="card-text">Chercheur en Économie Verte et Animateur social.</p>
