--- a/equipe/index.html
+++ b/equipe/index.html
@@ -89,7 +89,7 @@ navbar-dark bg-dark
   </div>
   <div class="card border-success">
     <img src="../images/eq.jpg" class="card-img-top img-thumbnail" alt="..."><!--<div class="card-header"><h5>Djioukou Astride Fallone</h5></div>--><div class="card-body">
-      <h5 class="card-title text-success font-weight-bold">Djioukou Astride Falonne</h5>
+      <h5 class="card-title text-success font-weight-bold">Djioukou Falonne</h5>
       <p class="card-text font-weight-bold">Secrétaire Général</p>
       <p class="card-text">Environnementaliste et spécialiste en gestion des risques et catastrophes en milieu industriel.</p>
     </div>
