--- a/output/gallerie/index.html
+++ b/output/gallerie/index.html
@@ -103,7 +103,7 @@ navbar-dark bg-dark
   <div class="card">
     <img src="../images/corsia-8.jpg" class="card-img-top img-thumbnail" alt="..."><div class="card-body">
       <!--<h5 class="card-title">Card title</h5>-->
-      <p class="card-text">CORSA.</p>
+      <p class="card-text">Atelier de renforcement des capacités des OSC africaines sur les politiques climatiques internationales et le mécanisme CORSIA</p>
       <a class="btn btn-info btn-block text-uppercase disabled" href=".">Rapport</a>
       <a class="btn btn-primary text-uppercase btn-block" type="button" data-toggle="collapse" href="#gal-4" data-target="#gal-4" aria-expanded="false" aria-controls="gal-4">Photos</a>
     </div>
@@ -111,7 +111,7 @@ navbar-dark bg-dark
   <div class="card">
     <img src="../images/missoke-1.jpg" class="card-img-top img-thumbnail" alt="..."><div class="card-body">
       <!--<h5 class="card-title">Card title</h5>-->
-      <p class="card-text">MISSOKE.</p>
+      <p class="card-text">Consultation des populations pour le dévéloppement.</p>
       <a class="btn btn-info btn-block text-uppercase disabled" href=".">Rapport</a>
       <a class="btn btn-primary text-uppercase btn-block" type="button" data-toggle="collapse" href="#gal-5" data-target="#gal-5" aria-expanded="false" aria-controls="gal-5">Photos</a>
     </div>
@@ -119,7 +119,7 @@ navbar-dark bg-dark
   <div class="card">
     <img src="../images/pfbc-1.jpg" class="card-img-top img-thumbnail" alt="..."><div class="card-body">
       <!--<h5 class="card-title">Card title</h5>-->
-      <p class="card-text">RDP-PFBC.</p>
+      <p class="card-text">Rencontre des partenaires pour le bassin du Congo.</p>
       <a class="btn btn-info btn-block text-uppercase disabled" href=".">Rapport</a>
       <a class="btn btn-primary text-uppercase btn-block" type="button" data-toggle="collapse" href="#gal-6" data-target="#gal-6" aria-expanded="false" aria-controls="gal-6">Photos</a>
     </div>
