--- a/output/a-propos/index.html
+++ b/output/a-propos/index.html
@@ -91,6 +91,7 @@ navbar-dark bg-dark
 			<li class="list-group-item">Promouvoir l’Économie Verte au Cameroun et en Afrique centrale</li>
 			<li class="list-group-item">Valoriser les éco-innovations</li>
 			<li class="list-group-item">Promouvoir et encadrer les métiers verts</li>
+			<li class="list-group-item">Observer les marchés carbones</li>
 			<li class="list-group-item">Soutenir les jeunes et femmes défavorisés</li>
 		</ul>
 </div>
@@ -100,9 +101,8 @@ navbar-dark bg-dark
 <li class="list-group-item">Économie Verte et gouvernance forestière</li>
 			<li class="list-group-item">REDD+ et changements climatiques</li>
 			<li class="list-group-item">Gestion des déchets ménagers et urbains</li>
-			<li class="list-group-item">Sensibilisation, éducation à l’éco-citoyenneté</li>
 			<li class="list-group-item">Démocratie environnementale</li>
-			<li class="list-group-item">Suivi des marchés carbones</li>
+			<li class="list-group-item">Marchés carbones</li>
 		</ul>
 </div>
 </div>
@@ -127,7 +127,7 @@ navbar-dark bg-dark
 	</div>
 </div>
 
-<h3 class="text-center font-weight-bold mb-2" style="color: #6ebe00;">Réseaux et Plateformes</h3>
+<h3 class="text-center font-weight-bold mb-2" style="color: #6ebe00;">Membre de:</h3>
 <div class="jumbotron">
 	<div class="row">
 		<div class="col-md-4 text-center">
@@ -148,8 +148,8 @@ navbar-dark bg-dark
 	
 	<div class="row">
 		<div class="col-md-4 text-center">
-    		<h4 class="font-weight-bold" style="color: #6ebe00;">REJEFAC</h4>
-    		<p>Réseau des Jeunes pour les Forêts d’Afrique Centrale</p>
+    		<h4 class="font-weight-bold" style="color: #6ebe00;">RECOJAC</h4>
+    		<p>Réseau Eaux et Climat des Organisations de Jeunesse en Afrique Centrale</p>
 		</div>
 
 		<div class="col-md-4 text-center">
@@ -178,6 +178,12 @@ navbar-dark bg-dark
     		<h4 class="font-weight-bold" style="color: #6ebe00;">HYDROMINE-OSC</h4>
     		<p>Plate-forme HYDROMINE et Organisation de la Société Civile pour la mise en œuvre du PGES sur le barrage Hydroélectrique de Grand Eweng).</p>
 		</div>
+		
+		<div class="col-md-4 text-center">
+    		<h4 class="font-weight-bold" style="color: #6ebe00;">RAC3</h4>
+    		<p>Réseau Africain sur le Carbone et les Changements Climatiques</p>
+		</div>
+		
 	</div>
 </div>
     </div>
