--- a/output/index.html
+++ b/output/index.html
@@ -87,11 +87,19 @@ navbar-dark bg-dark
 <li data-target="#slider" data-to-slide="3">
 			</li>
 <li data-target="#slider" data-to-slide="4">
+			</li>
+<li data-target="#slider" data-to-slide="5">
 		</li>
 </ol>
 <div class="carousel-inner">
 	 		<div class="carousel-item active">
 	 		<img src="images/corsia-8.jpg" class="d-block w-100" alt="..."><!--<div class="carousel-caption d-none d-md-block">
+	 			<<h3>Premier Label</h3>
+	 			<p>Ceci est le premier label</p>
+	 		</div>-->
+</div>
+	 		<div class="carousel-item">
+	 		<img src="images/sante-4.jpg" class="d-block w-100" alt="..."><!--<div class="carousel-caption d-none d-md-block">
 	 			<<h3>Premier Label</h3>
 	 			<p>Ceci est le premier label</p>
 	 		</div>-->
