--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@ bg-dark
 <a href="activites/" class="nav-link">ACTIVITÉS</a>
                 </li>
 <li class="nav-item font-weight-bold">
+<a href="ramac-2023/" class="nav-link">RAMAC 2023</a>
+                </li>
+<li class="nav-item font-weight-bold">
 <a href="gallerie/" class="nav-link">GALLÉRIE</a>
                 </li>
 <li class="nav-item font-weight-bold">
 <a href="contact/" class="nav-link">CONTACT</a>
-                </li>
-<li class="nav-item font-weight-bold">
-<a href="ramac-2023/" class="nav-link">RAMAC 2023</a>
 
                 
             </li>
@@ -142,6 +142,18 @@ bg-dark
 	 		<span class="carousel-control-next-icon" aria-hidden="true"></span>
 	 		<span class="sr-only">Suivant</span>
 	 	</a>
+	</div>
+</div>
+
+<div class="jumbotron container-fluid">
+	<h3>RAMAC 2023</h3>
+	<div class="row">
+		<div class="col-8">
+			<p style="font-size: 1.2em;">L'ACDESPE organise sous le haut patronage du Premier Ministre Chef du Gouvernement de la République du Cameroun, les <strong>1ères Rencontres Africaine des Marchés Carbone</strong>. Du 04 au 07 Octobre 2023 à Douala, Cameroun.</p>
+		</div>
+		<div class="col-4">
+			<a class="btn btn-success btn-block btn-lg text-uppercase" style="background-color: #6ebe00; border-color: #6ebe00;" href="ramac-2023">Plus d'Infos</a>
+		</div>
 	</div>
 </div>
 
