--- a/pages/index.html
+++ b/pages/index.html
@@ -64,6 +64,18 @@
 	</div>
 </div>
 
+<div class="jumbotron container-fluid">
+	<h3>RAMAC 2023</h3>
+	<div class="row">
+		<div class="col-8">
+			<p style="font-size: 1.2em;">L'ACDESPE organise sous le haut patronage du Premier Ministre Chef du Gouvernement de la République du Cameroun, les <strong>1ères Rencontres Africaine des Marchés Carbone</strong>. Du 04 au 07 Octobre 2023 à Douala, Cameroun.</p>
+		</div>
+		<div class="col-4">
+			<a class="btn btn-success btn-block btn-lg text-uppercase" style="background-color: #6ebe00; border-color: #6ebe00;" href="/ramac-2023">Plus d'Infos</a>
+		</div>
+	</div>
+</div>
+
 <div class="card-deck mb-5">
   <div class="card">
   	<div class="card-header" style="color: #6ebe00;"><h4 class="font-weight-bold"><span class="oi oi-droplet mr-2"></span>Environnement</h4></div>
