--- a/activites/index.html
+++ b/activites/index.html
@@ -92,7 +92,7 @@ bg-dark
       
       <p class="card-text">Cette COP en terre africaine devrait dès lors être un tournant pour la société civile de bien se mobiliser afin d’exiger des décideurs plus d’ambitions climatiques. Cela passe également par une mobilisation citoyenne au niveau de nos pays. A cet effet, sous le parrainage du Délégué Départemental de l'Environnement du Wouri, l'Association Camerounaise pour le Développement, l’Entraide Sociale et la Protection de l’Environnement (ACDESPE) organise avec l’appui financier de Climate Action Network – West and Central Africa (CANWA) une mini conférence débat sur le thème: <strong>Rendre accessibles et bénéfiques les marchés internationaux du carbone pour les communautés locales au Cameroun</strong>.</p>
       
-      <p class="card-text">Elle se tient à Douala, le 20 Octobre 2023 au Campus de l'Université de Douala et à pour objectifs d’exhorter les décideurs locaux à renforcer la prise en comptes des marchés internationaux du carbone dans leurs politiques climatiques nationales et locales, tout en sensibilisant les décideurs, les communautés locales et la jeunesse sur la nécessité de s’engager dans les marchés internationaux du carbone.</p>
+      <p class="card-text">Elle se tient le 19 Octobre 2022 à partir de 12h00 au campus de l'Université Catholique Saint Jếrome de Douala et à pour objectifs d’exhorter les décideurs locaux à renforcer la prise en comptes des marchés internationaux du carbone dans leurs politiques climatiques nationales et locales, tout en sensibilisant les décideurs, les communautés locales et la jeunesse sur la nécessité de s’engager dans les marchés internationaux du carbone.</p>
     </div>
   </div>
   
